@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2016-07-18
+ * Added filter to Wing::Role::Result::Field.
+
 2016-07-11
  * Disambiguate a Rest _order_by clause.
  * By default content filter allows for H2 through H6.
